# ai-call-quality

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
evals/: evaluators.py  golden_dataset.py
examples/: kb.json  run_example.py  sample_input.json
scripts/: add_speaker_notes.py  bench_fanout.py  build_week2_ppt.py  call_deployment.py  run_evals.py  upload_dataset.py
src/call_quality/: __init__.py  graph.py  kb.py  llm.py  schemas.py  scoring_subgraph.py  state.py
src/call_quality/middleware/: __init__.py  pii.py
src/call_quality/nodes/: __init__.py  aggregator.py  auditor.py  extraction.py  input_node.py  knowledge_retriever.py  question_extractor.py  rule_scorer.py  scoring_dispatcher.py  scoring_loop.py
src/call_quality/prompts/: audit.txt  extract_questions.txt  extract_words.txt  hot_words.txt  score.txt  score_rule.txt
tests/: test_smoke.py
